--- a/index.html
+++ b/index.html
@@ -2,109 +2,124 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Diversion Ilimitada</title>
+    <title>Diversión Ilimitada</title>
     <style>
         body {
-            margin: 0;
+            justify-content: flex-start;
+            flex-direction: column;
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #000066, #000099);
+            background: url('./images/fondo3.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: white;
             text-align: center;
-            margin: 0;
-            padding: 0;
-            background: url('./images/fondodslweb.jpg') no-repeat center center fixed; /* Cambia 'ruta-de-tu-imagen.png' por la URL o ruta de tu imagen */
-            background-size: cover; /* Hace que la imagen cubra todo el fondo */
-            background-position: center; /* Centra la imagen */
-            background-repeat: no-repeat; /* Evita que la imagen se repita */
-            background-attachment: fixed; /* Fija la imagen de fondo */
-            height: 100%; /* Asegura que cubra toda la altura de la ventana */
-            width: 100%; /* Asegura que cubra todo el ancho de la ventana */
-            overflow: hidden; /* Opcional: Evita que el contenido desborde */
-            position: fixed; /* Fija la posición para evitar el desplazamiento */
+            min-height: 100vh;
+            padding-top: 20px;
         }
 
-
         .hero {
-            min-height: 80vh; /* Ajusta para que el footer tenga espacio */
-            position: relative;
-            padding: 20px;
-            text-align: center;
+            min-height: 40vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            height: 90vh; /* Ajusta según la altura que necesites */
+            padding: 2rem 0.5rem;
+            margin-top: 1rem;
         }
 
         .hero h1 {
-            font-size: calc(2.5rem + 1vw); /* Escala el tamaño proporcionalmente al ancho de la ventana */
-            margin: 0 0 20px 0;
-            font-size: 3rem;
+            font-size: calc(2rem + 1.5vw);
             font-weight: bold;
             color: #FFD700;
             text-shadow: 2px 2px 4px #000;
             animation: pulse 2s infinite;
         }
 
-        .hero .subtext {
+        .counter-box {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.7);
+            color: #FFD700;
+            padding: 1.5rem;
+            border-radius: 1rem;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            margin: 0 auto 1.5rem;
+            text-align: center;
+            min-height: 150px;
+        }
+
+        .counter-box h2 {
             font-size: 1.5rem;
-            color: #FFFFFF;
-            margin: 10px 0 20px;
+            margin-bottom: 0.5rem;
+        }
+
+        .counter {
+            font-size: 2.5rem;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px #000;
+            margin-bottom: 0rem;
+        }
+
+        .subtext {
+            font-size: 1.5rem;
+            margin: 0rem 0;
+        }
+
+        .name-input {
+            margin-top: 0.25rem;
+            padding: 0.5rem;
+            font-size: 1rem;
+            border-radius: 10px;
+            border: none;
+            max-width: 300px;
+            width: 100%;
         }
 
         .cta-button {
-
-            display: inline-block;
-            background: linear-gradient(45deg, #FFD700, #FF8C00);
+            background: linear-gradient(45deg, #00ff40, #45ff17);
             color: #000;
-             padding: calc(10px + 0.5vw) calc(20px + 1vw); /* Escala el padding proporcionalmente */
-            font-size: calc(1rem + 0.5vw); /* Escala el texto del botón */
+            padding: 0.75rem 1.75rem;
+            font-size: 1.2rem;
             font-weight: bold;
-            border-radius: 30px;
+            border-radius: 5rem;
             text-decoration: none;
             box-shadow: 0 5px 15px rgba(255, 140, 0, 0.5);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            display: inline-block;
+            margin-top: 0.75rem;
+            border: none;
         }
-
 
         .cta-button:hover {
             transform: scale(1.1);
             box-shadow: 0 8px 20px rgba(255, 140, 0, 0.7);
         }
 
-        /* .images {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
+        .error-message {
+            color: #ff4d4d;
+            font-size: 1rem;
+            margin-top: 0.5rem;
+            height: 1.5rem; /* Para evitar que cambie la estructura al aparecer */
         }
-
-       .images img {
-            height: 200px;
-            border-radius: 20px;
-            transition: transform 0.3s ease;
-        }
-
-        .images img:hover {
-            transform: scale(1.1);
-        }*/
 
         .footer {
-            position: fixed; /* Cambiado de fixed a relative */
-            bottom: 0;
-            width: 100%;
+            background-color: rgba(12, 14, 60, 0.8);
+            color: #ffffff;
+            font-weight: 500;
+            font-size: 1rem;
+            padding: 1rem;
             text-align: center;
-            font-size: 14px;
-            color: #CCCCCC;
-            margin-top: 0px; /* Añade espacio entre el contenido principal y el footer */
-            padding: 10px 0; /* Espaciado interno para mejorar la visibilidad */
+            width: 100%;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            z-index: 1000;
+            backdrop-filter: blur(2px);
         }
-        
-
-
-       
 
         @keyframes pulse {
             0%, 100% {
@@ -117,25 +132,70 @@
     </style>
 </head>
 <body>
-    <div class="hero">
-        <h1 style="margin-top: 10px; margin-bottom: 1px;">¡GANA LAS 24HS CON NOSOTROS!</h1>
-        <p class="subtext">Registrate AHORA y obtené 30% DE BONO</p>
+    <div class="container">
+        <div class="hero">
+            <div class="counter-box" style="color: #ff0000;">
+                <h3 ><STRONG>¡TIEMPO RESTANTE PARA RECLAMAR TU BONO!</STRONG></h3>
+                <div id="contador" class="counter"></div>
+            </div>
 
-        <div class="cta-section">
-        <a href="https://wa.me/5492233438146?text=¡Buenas!%20Me%20gustaría%20crear%20un%20usuario.%20Mi%20nombre%20es:" class="cta-button">
-            <i class="fab fa-whatsapp"></i> ¡CREA TU USUARIO AHORA!
-        </a>
+            <h1 class="mb-2">¡GANA LAS 24HS CON NOSOTROS!</h1>
+
+            <p class="subtext">Ingresá el apodo para crear tu usuario y obtené <strong>30% DE BONO</strong></p>
+
+            <form id="registroForm" class="mt-2">
+                <input type="text" id="nombreUsuario" class="name-input" placeholder="Mi apodo es..." />
+                <button type="submit" class="cta-button">
+                    <i class="fab fa-whatsapp"></i> ¡REGISTRATE AHORA!
+                </button>
+                <div id="errorText" class="error-message"></div>
+            </form>
         </div>
-
-        <!--<div class="images">
-            <img src="./images/gates of olympus.jpg" alt="Zeus">
-            <img src="./images/big bass.webp" alt="Pescador">
-            <img src="./images/jjw.webp" alt="Joker">
-        </div>-->
     </div>
 
     <div class="footer">
         Juega con responsabilidad | Para mayores de 18 años | Todos los derechos reservados
     </div>
+
+    <script>
+        // Contador regresivo
+        function startCountdown(duration, display) {
+            let timer = duration;
+            const interval = setInterval(function () {
+                const hours = String(Math.floor(timer / 3600)).padStart(2, '0');
+                const minutes = String(Math.floor((timer % 3600) / 60)).padStart(2, '0');
+                const seconds = String(timer % 60).padStart(2, '0');
+                display.textContent = `${hours}:${minutes}:${seconds}`;
+                if (--timer < 0) {
+                    clearInterval(interval);
+                    display.textContent = "¡CONTACTANOS POR NUEVOS BENEFICIOS!";
+                }
+            }, 1000);
+        }
+
+        // Iniciar contador
+        const counterElement = document.getElementById('contador');
+        startCountdown(59, counterElement); // Cambiar a 3600 para 1 hora
+
+        // Validación y envío
+        const form = document.getElementById('registroForm');
+        const inputNombre = document.getElementById('nombreUsuario');
+        const errorText = document.getElementById('errorText');
+
+        form.addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            const nombre = inputNombre.value.trim();
+            if (!nombre) {
+                errorText.textContent = 'Por favor, ingresá tu apodo antes de continuar.';
+                return;
+            }
+
+            errorText.textContent = ''; // Limpiar error si había
+            const mensaje = `¡Buenas! Me gustaría crear un usuario. Mi apodo es: ${nombre}`;
+            const url = `https://wa.me/5492233438146?text=${encodeURIComponent(mensaje)}`;
+            window.open(url, '_blank');
+        });
+    </script>
 </body>
 </html>
